--- a/kubernetes/apps/security/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/security/authelia/app/helmrelease.yaml
@@ -37,8 +37,8 @@ spec:
               - name: POSTGRES_SUPER_PASS
                 valueFrom:
                   secretKeyRef:
-                    name: postgres-superuser
-                    key: password
+                    name: authelia-secret
+                    key: POSTGRES_PASS
               - name: POSTGRES_USER
                 valueFrom:
                   secretKeyRef:
