--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster.yaml
@@ -8,13 +8,21 @@ metadata:
     kyverno.io/ignore: "true"
 spec:
   instances: 3
-  imageName: ghcr.io/cloudnative-pg/postgresql:14.6
+  imageName: ghcr.io/cloudnative-pg/postgresql:14.9-17
+  enableSuperuserAccess: true
   primaryUpdateStrategy: unsupervised
   storage:
     size: 50Gi
     storageClass: ceph-block
   superuserSecret:
-    name: postgres-superuser
+    name: cloudnative-pg-secret
+  bootstrap:
+    recovery:
+      source: &previousCluster postgres-v3
+  postgresql:
+    parameters:
+      max_connections: "600"
+      shared_buffers: 512MB
   monitoring:
     enablePodMonitor: true
   backup:
@@ -25,7 +33,7 @@ spec:
         maxParallel: 8
       destinationPath: s3://postg/
       endpointURL: http://minio.bharris.co:9001
-      serverName: postgres-v1
+      serverName: &currentCluster postgres-v4
       s3Credentials:
         accessKeyId:
           name: postgres-minio
@@ -34,7 +42,7 @@ spec:
           name: postgres-minio
           key: MINIO_SECRET_KEY
   externalClusters:
-    - name: postgres-v1
+    - name: *previousCluster
       barmanObjectStore:
         wal:
           compression: bzip2
