--- a/kubernetes/apps/databases/cloudnative-pg/app/external-secret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/external-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: cloudnative-pg
-  namespace: database
+  namespace: databases
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
