--- a/kubernetes/apps/databases/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/cluster/cluster.yaml
@@ -32,7 +32,7 @@ spec:
         compression: bzip2
         maxParallel: 8
       destinationPath: s3://postg/
-      endpointURL: http://minio.bharris.co:9001
+      endpointURL: http://minio.bharris.co
       serverName: &currentCluster postgres-v1
       s3Credentials:
         accessKeyId:
@@ -41,18 +41,18 @@ spec:
         secretAccessKey:
           name: postgres-minio
           key: MINIO_SECRET_KEY
-  externalClusters:
-    - name: *previousCluster
-      barmanObjectStore:
-        wal:
-          compression: bzip2
-          maxParallel: 8
-        destinationPath: s3://postg/
-        endpointURL: http://minio.bharris.co:9001
-        s3Credentials:
-          accessKeyId:
-            name: postgres-minio
-            key: MINIO_ACCESS_KEY
-          secretAccessKey:
-            name: postgres-minio
-            key: MINIO_SECRET_KEY
+# externalClusters:
+  # - name: *previousCluster
+    # barmanObjectStore:
+      # wal:
+        # compression: bzip2
+        # maxParallel: 8
+      # destinationPath: s3://postg/
+      # endpointURL: http://minio.bharris.co:9001
+      # s3Credentials:
+        # accessKeyId:
+          # name: postgres-minio
+          # key: MINIO_ACCESS_KEY
+        # secretAccessKey:
+          # name: postgres-minio
+          # key: MINIO_SECRET_KEY
