--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
+# - ./audiobookshelf/ks.yaml
 # - ./calibre-web/ks.yaml
 # - ./calibre/ks.yaml
 # - ./immich/ks.yaml
@@ -21,4 +21,4 @@ resources:
 # - ./varken/ks.yaml
 # - ./webtop/ks.yaml
 # - ./wizarr/ks.yaml
-  - ./ubuntu/ks.yaml
+# - ./ubuntu/ks.yaml
